fixed image spacing, fixed image heights not matching, fixed missing highlight

--- a/css-ecommerce-page/style.css
+++ b/css-ecommerce-page/style.css
@@ -4,6 +4,8 @@ body {
 
 img {
   width: 100%;
+  height: 100%;
+  object-fit: fill;
 }
 
 div.container {
@@ -13,7 +15,7 @@ div.container {
 div.row {
   display: flex;
   justify-content: center;
-  padding: 0 15%;
+  padding: 0 10%;
 }
 
 div.col-full {
@@ -31,8 +33,15 @@ div.header {
 
 div.item {
   font-weight: 600;
+  width: 100%;
+  height: 100%;
+  padding: 0 5%;
 }
 
 span {
   color: lightgrey;
+}
+
+mark {
+  background-color: rgba(255, 166, 0, 0.1);
 }
